feat(aut-service): clean code with sonarQube